--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -35,7 +35,7 @@ package="gstreamer-app"
 
 [lib]
 name = "gstsodium"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 path = "src/lib.rs"
 
 [[example]]
