--- a/tutorial/Cargo.toml
+++ b/tutorial/Cargo.toml
@@ -19,7 +19,7 @@ once_cell = "1.0"
 
 [lib]
 name = "gstrstutorial"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
