--- a/video/flavors/Cargo.toml
+++ b/video/flavors/Cargo.toml
@@ -21,7 +21,7 @@ smallvec = "1.0"
 
 [lib]
 name = "gstrsflv"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
