--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -34,7 +34,7 @@ serde_json = "1"
 
 [lib]
 name = "gstrusoto"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
