--- a/video/cdg/Cargo.toml
+++ b/video/cdg/Cargo.toml
@@ -21,7 +21,7 @@ lazy_static = "1.0"
 
 [lib]
 name = "gstcdg"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
