--- a/video/gif/Cargo.toml
+++ b/video/gif/Cargo.toml
@@ -18,7 +18,7 @@ once_cell = "1"
 
 [lib]
 name = "gstgif"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 path = "src/lib.rs"
 
 [[example]]
