--- a/video/rav1e/Cargo.toml
+++ b/video/rav1e/Cargo.toml
@@ -18,7 +18,7 @@ lazy_static = "1.0"
 
 [lib]
 name = "gstrav1e"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
