--- a/video/rspng/Cargo.toml
+++ b/video/rspng/Cargo.toml
@@ -19,7 +19,7 @@ atomic_refcell = "0.1"
 
 [lib]
 name = "gstrspng"
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib", "rlib", "staticlib"]
 path = "src/lib.rs"
 
 [build-dependencies]
