ci: check if all plugins are installed with meson
Will prevent us to forget adding new plugins to meson.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -153,8 +153,9 @@ test nightly:
 meson shared:
   extends: .img-stable
   script:
-    - meson build --default-library=shared
-    - ninja -C build
+    - meson build --default-library=shared --prefix=$(pwd)/install
+    - ninja -C build install
+    - ./ci/check-plugins-installed.py install
   rules:
     - if: '$UPDATE_IMG == null || $UPDATE_IMG == "stable"'
 
