--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -12,7 +12,7 @@ glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gst = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package="gstreamer" }
 gst-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_14"], package = "gstreamer-base" }
 sodiumoxide = "0.2.1"
-lazy_static = "1.3.0"
+once_cell = "1.3.0"
 hex = "0.4"
 smallvec = "1.0"
 
