--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -14,10 +14,10 @@ reqwest = { version = "0.10", features = ["cookies", "gzip"] }
 futures = "0.3"
 hyperx = "1.0"
 mime = "0.3"
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 tokio = { version = "0.2", features = ["time", "rt-threaded"] }
-lazy_static = "1.0"
+once_cell = "1.0"
 
 [dev-dependencies]
 hyper = "0.13"
