--- a/video/flavors/Cargo.toml
+++ b/video/flavors/Cargo.toml
@@ -9,14 +9,14 @@ description = "Rust FLV Plugin"
 
 [dependencies]
 glib = { git = "https://github.com/gtk-rs/gtk-rs" }
-gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 num-rational = { version = "0.3", default-features = false, features = [] }
 nom = "6"
 flavors = { git = "https://github.com/rust-av/flavors" }
 muldiv = "1.0"
 byteorder = "1.0"
-lazy_static = "1.0"
+once_cell = "1.0"
 smallvec = "1.0"
 
 [lib]
