--- a/video/rspng/Cargo.toml
+++ b/video/rspng/Cargo.toml
@@ -11,11 +11,13 @@ description = "An PNG encoder/decoder written in pure Rust"
 glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst_video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst_check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 png = "0.16.3"
 once_cell = "1"
 parking_lot = "0.11"
 atomic_refcell = "0.1"
+
+[dev-dependencies]
+gst_check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 
 [lib]
 name = "gstrspng"
