Add new text/json crate
This new crate consists of two elements, jsongstenc and jsongstparse

Both these elements can deal with an ndjson based format, consisting
for now of two item types: "Buffer" and "Header"

eg:

{"Header":{"format":"foobar"}}
{"Buffer":{"pts":0,"duration":43,"data":{"foo":"bar"}}}

jsongstparse will interpret this by first sending caps
application/x-json, format=foobar, then a buffer containing
{"foo":"bar"}, timestamped as required.

Elements further downstream can then interpret the data further.

jsongstenc will simply perform the reverse operation.

--- a/meson.build
+++ b/meson.build
@@ -48,6 +48,7 @@ plugins_rep = {
   'generic/threadshare': 'libgstthreadshare',
   'utils/togglerecord': 'libgsttogglerecord',
   'video/hsv': 'libgsthsv',
+  'text/json': 'libgstrsjson',
 }
 
 exclude = []
