--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -19,6 +19,8 @@ cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs", features=["use_glib"] }
 pango = { git = "https://github.com/gtk-rs/gtk-rs" }
 pangocairo = { git = "https://github.com/gtk-rs/gtk-rs" }
 byteorder = "1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0", features = ["raw_value"] }
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
