ci: install cargo-c to proper location
Need to define CARGO_HOME so it's installed to the same places as the
rest of the Rust tools.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,19 +33,19 @@ stages:
 .debian:10-stable:
   extends: .debian:10
   variables:
-    FDO_DISTRIBUTION_TAG: '$GST_RS_STABLE-${GST_RS_IMG_TAG}_2021-01-04.0'
+    FDO_DISTRIBUTION_TAG: '$GST_RS_STABLE-${GST_RS_IMG_TAG}_2021-01-04.1'
     FDO_BASE_IMAGE: "registry.freedesktop.org/gstreamer/gstreamer-rs/debian/10:$GST_RS_STABLE-$GST_RS_IMG_TAG"
 
 .debian:10-msrv:
   extends: .debian:10
   variables:
-    FDO_DISTRIBUTION_TAG: '$GST_RS_MSRV-${GST_RS_IMG_TAG}_2021-01-04.0'
+    FDO_DISTRIBUTION_TAG: '$GST_RS_MSRV-${GST_RS_IMG_TAG}_2021-01-04.1'
     FDO_BASE_IMAGE: "registry.freedesktop.org/gstreamer/gstreamer-rs/debian/10:$GST_RS_MSRV-$GST_RS_IMG_TAG"
 
 .debian:10-nightly:
   extends: .debian:10
   variables:
-    FDO_DISTRIBUTION_TAG: 'nightly-${GST_RS_IMG_TAG}_2021-01-04.0'
+    FDO_DISTRIBUTION_TAG: 'nightly-${GST_RS_IMG_TAG}_2021-01-04.1'
     FDO_BASE_IMAGE: "registry.freedesktop.org/gstreamer/gstreamer-rs/debian/10:nightly-$GST_RS_IMG_TAG"
 
 .build-debian-container:
@@ -57,8 +57,7 @@ stages:
     FDO_DISTRIBUTION_EXEC: >-
       bash ci/install-dav1d.sh &&
       apt clean &&
-      source ./ci/env.sh &&
-      cargo install cargo-c
+      bash ./ci/install-rust-ext.sh
   rules:
     - if: '$UPDATE_IMG == null'
 
