--- a/net/reqwest/Cargo.toml
+++ b/net/reqwest/Cargo.toml
@@ -10,17 +10,17 @@ edition = "2018"
 [dependencies]
 url = "2.1"
 glib = { git = "https://github.com/gtk-rs/gtk-rs" }
-reqwest = { version = "0.10", features = ["cookies", "gzip"] }
+reqwest = { version = "0.11", features = ["cookies", "gzip"] }
 futures = "0.3"
 hyperx = "1.0"
 mime = "0.3"
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_10"] }
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-tokio = { version = "0.2", features = ["time", "rt-threaded"] }
+tokio = { version = "1.0", default-features = false, features = ["time", "rt-multi-thread"] }
 once_cell = "1.0"
 
 [dev-dependencies]
-hyper = "0.13"
+hyper = { version = "0.14", features = ["server"] }
 
 [lib]
 name = "gstreqwest"
