--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -10,19 +10,19 @@ description = "Amazon Web Services plugin"
 edition = "2018"
 
 [dependencies]
-bytes = "0.5"
+bytes = "1.0"
 futures = "0.3"
 glib = { git = "https://github.com/gtk-rs/gtk-rs" }
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_12"] }
-rusoto_core = "0.45"
-rusoto_s3 = "0.45"
-rusoto_credential = "0.45"
-rusoto_signature = "0.45"
+rusoto_core = "0.46"
+rusoto_s3 = "0.46"
+rusoto_credential = "0.46"
+rusoto_signature = "0.46"
 url = "2"
 percent-encoding = "2"
-tokio = { version = "0.2", features = [ "rt-threaded" ] }
-async-tungstenite = { version = "0.9", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }
+tokio = { version = "1.0", features = [ "rt-multi-thread" ] }
+async-tungstenite = { version = "0.12", features = ["tokio", "tokio-runtime", "tokio-native-tls"] }
 nom = "5.1.1"
 crc = "1.8.1"
 byteorder = "1.3.4"
