--- a/net/rusoto/Cargo.toml
+++ b/net/rusoto/Cargo.toml
@@ -31,6 +31,9 @@ serde = "1"
 serde_derive = "1"
 serde_json = "1"
 atomic_refcell = "0.1"
+# FIXME: Temporary fix for breakage in funty 1.2
+# See https://github.com/myrrlyn/funty/issues/3
+funty="=1.1.0"
 
 [lib]
 name = "gstrusoto"
