text: new element for text processing: regex
The element expects an array of "commands", as GstStructures,
in the form:

operation, pattern=<pattern>, ...

The only operation implemented for now is replace-all, eg:

replace-all, pattern=foo, replacement=bar

Other operations can be implemented if useful in the future,
eg. "match" could post a message to the bus when the pattern
is encountered.

The main use case for this is automatic speech recognition,
as implemented by eg awstranscribe as users may want to replace
swear words with tamer language.

Commands are applied in order.

The interface is usable through the CLI with the usual escaping
strategies, though trying to pass in actual regular expressions
through it is a bit tricky, as this introduces yet another
level of escaping.

--- a/meson.build
+++ b/meson.build
@@ -49,6 +49,7 @@ plugins_rep = {
   'utils/togglerecord': 'libgsttogglerecord',
   'video/hsv': 'libgsthsv',
   'text/json': 'libgstrsjson',
+  'text/regex': 'libgstrsregex',
 }
 
 exclude = []
