video: implement webp decoder around libwebp-sys2 crate
Unlike webpdec from -bad, this element inherits from GstElement
and can decode animated webp data.

--- a/meson.build
+++ b/meson.build
@@ -50,6 +50,9 @@ plugins_rep = {
   'video/hsv': 'libgsthsv',
   'text/json': 'libgstrsjson',
   'text/regex': 'libgstrsregex',
+  # FIXME: libwebp-sys2 will build its bundled version on msvc and apple platforms
+  # https://github.com/qnighy/libwebp-sys2-rs/issues/4
+  'video/webp': 'libgstrswebp',
 }
 
 exclude = []
