--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "video/rav1e",
     "video/rspng",
     "video/hsv",
+    "video/webp",
     "text/wrap",
     "text/json",
     "text/regex",
