--- a/generic/threadshare/Cargo.toml
+++ b/generic/threadshare/Cargo.toml
@@ -19,13 +19,10 @@ once_cell = "1"
 tokio = { git = "https://github.com/fengalin/tokio", tag = "tokio-0.2.13-throttling", features = ["io-util", "macros", "rt-core", "sync", "stream", "time", "tcp", "udp", "rt-util"] }
 futures = { version = "0.3", features = ["thread-pool"] }
 rand = "0.8"
-socket2 = "0.3"
+socket2 = {features = ["all"], version = "0.4"}
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winsock2", "processthreadsapi"] }
-
-[target.'cfg(unix)'.dependencies]
-socket2 = { version = "0.3", features = ["reuseport"] }
 
 [dev-dependencies]
 gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
