--- a/audio/audiofx/Cargo.toml
+++ b/audio/audiofx/Cargo.toml
@@ -18,6 +18,7 @@ once_cell = "1.0"
 ebur128 = "0.1"
 nnnoiseless = { version = "0.3", default-features = false }
 smallvec = "1"
+atomic_refcell = "0.1"
 
 [lib]
 name = "gstrsaudiofx"
