Add a GTK4 paintable sink plugin
Co-authored-by: Sebastian Dröge <sebastian@centricular.com>
Co-authored-by: Jordan Petridis <jordan@centricular.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ members = [
     "video/ffv1",
     "video/flavors",
     "video/gif",
+    "video/gtk4",
     "video/rav1e",
     "video/rspng",
     "video/hsv",
