ci: Allow the coverage job to fail
It's using the nightly compiler and can easily break every now and then,
like it does now with https://github.com/rust-lang/rust/issues/84421 .

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -218,6 +218,7 @@ outdated:
     - cargo outdated --root-deps-only --exit-code 1 -v
 
 coverage:
+  allow_failure: true
   extends:
     - .img-nightly
   stage: 'extras'
