--- a/audio/lewton/Cargo.toml
+++ b/audio/lewton/Cargo.toml
@@ -8,7 +8,7 @@ description = "lewton Vorbis Decoder Plugin"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/gtk-rs" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 lewton = { version = "0.10", default-features = false }
