--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -8,7 +8,7 @@ description = "Rust Regular Expression Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/gtk-rs" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 once_cell = "1.0"
 regex = "1"
 
