--- a/text/wrap/Cargo.toml
+++ b/text/wrap/Cargo.toml
@@ -8,7 +8,7 @@ description = "Rust Text Wrap Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/gtk-rs" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 once_cell = "1.0"
 textwrap = { version = "0.13.2", features = ["hyphenation"] }
 hyphenation = "0.8"
