--- a/utils/togglerecord/Cargo.toml
+++ b/utils/togglerecord/Cargo.toml
@@ -8,12 +8,12 @@ repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 edition = "2018"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/gtk-rs" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gtk = { git = "https://github.com/gtk-rs/gtk-rs", optional = true }
-gio = { git = "https://github.com/gtk-rs/gtk-rs", optional = true }
+gtk = { git = "https://github.com/gtk-rs/gtk3-rs", optional = true }
+gio = { git = "https://github.com/gtk-rs/gtk-rs-core", optional = true }
 parking_lot = "0.11"
 more-asserts = "0.2"
 once_cell = "1.0"
