--- a/video/closedcaption/Cargo.toml
+++ b/video/closedcaption/Cargo.toml
@@ -8,16 +8,16 @@ description = "Rust Closed Caption Plugin"
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/gtk-rs" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 nom = "6.0"
 either = "1"
 uuid = { version = "0.8", features = ["v4"] }
 chrono = "0.4"
 once_cell = "1.0"
 atomic_refcell = "0.1"
-cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs", features=["use_glib"] }
-pango = { git = "https://github.com/gtk-rs/gtk-rs" }
-pangocairo = { git = "https://github.com/gtk-rs/gtk-rs" }
+cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", features=["use_glib"] }
+pango = { git = "https://github.com/gtk-rs/gtk-rs-core" }
+pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 byteorder = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
