--- a/video/rspng/Cargo.toml
+++ b/video/rspng/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 description = "An PNG encoder/decoder written in pure Rust"
 
 [dependencies]
-glib = { git = "https://github.com/gtk-rs/gtk-rs" }
+glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst_video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 png = "0.16.3"
