--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,7 @@ endif
 cargo = find_program('cargo', version:'>=1.40')
 cargo_wrapper = find_program('cargo_wrapper.py')
 cargo_c = find_program('cargo-cbuild', required: false)
+rustc = find_program('rustc', version:'>=1.52')
 
 if not cargo_c.found()
   error('cargo-c missing, install it with: \'cargo install cargo-c\'')
